Data Little Scale working - commenced implementation of BiRNN! An issue arises from auc_evaluator, it seems like the tresholds list is smaller than usual!

--- a/Data-Preprocessing-Copy1.ipynb
+++ b/Data-Preprocessing-Copy1.ipynb
@@ -3334,6 +3334,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 266,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1,2,3'"
+      ]
+     },
+     "execution_count": 266,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "','.join([str(1),str(2),str(3)])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
