fixes ROC plotting

--- a/Data-Preprocessing-Copy1.ipynb
+++ b/Data-Preprocessing-Copy1.ipynb
@@ -1575,55 +1575,41 @@
     "        return get_num_trans(user,dataFrame_count)\n",
     "    else:\n",
     "        return 0\n",
-    "def user_generator(disk_engine,table='data_trim',sample_size=50,\n",
-    "                   usr_ratio=80,mode='train',cutt_off_date='2014-05-11',trans_mode='train'):\n",
-    "#     dataFrame_Y = pd.read_sql_query('select distinct acct_id, FRD_IND '\n",
-    "#                        'from {table} '\n",
-    "#                        'where FRD_IND=\"Y\"'.format(table=table), disk_engine)\n",
-    "#     dataFrame_N = pd.read_sql_query('select distinct acct_id, FRD_IND '\n",
-    "#                        'from {table} '\n",
-    "#                        'where FRD_IND=\"N\"'.format(table=table), disk_engine)\n",
-    "#     dataFrame = pd.read_sql_query('select distinct acct_id, FRD_IND '\n",
-    "#                        'from {table} '\n",
-    "#                        'order by FRD_IND'.format(table=table), disk_engine)\n",
-    "#     dataFrame_count = pd.read_sql_query('select acct_id, count(*) as num_trans '\n",
-    "#                        'from {table} '\n",
-    "#                        'group by acct_id '\n",
-    "#                         'order by -num_trans'\n",
-    "#                        .format(table=table), disk_engine)\n",
+    "def user_generator(disk_engine,table='data_trim',sample_size=50,usr_ratio=80,\n",
+    "                   mode='train',cutt_off_date='2014-05-11',trans_mode='train',sub_sample=None):\n",
+    "\n",
+    "\n",
     "    dataFrame_count = get_count_table(table,disk_engine,cutt_off_date,trans_mode)\n",
+    "    \n",
     "#     display(dataFrame_count.head(5)) \n",
     "    print \"User List acquired\"\n",
     "    u_list = list(dataFrame_count.acct_id)\n",
-    "    print 'List lens: df-',len(u_list),' count-',len(list(dataFrame_count.acct_id))\n",
     "#     u_list.extend(list(dataFrame_Y.acct_id))\n",
     "    print 'total # users:',len(u_list)\n",
     "    u_set = set(u_list)\n",
     "    print 'total # unique users:',len(u_set) \n",
     "    user_tr,user_ts = train_test_split(list(u_set), test_size=0.33, random_state=42)\n",
-    "#     print 'total # transactions:',total_trans_batch(user_tr,dataFrame_count)\n",
+    "    print 'total # sequences:',total_trans_batch(list(u_set),dataFrame_count)\n",
     "    if mode == 'train':\n",
     "        u_list =  user_tr\n",
     "    else:\n",
     "        u_list =  user_ts\n",
-    "    print 'total # transactions:',total_trans_batch(u_list,dataFrame_count)\n",
+    "    if trans_mode == 'test':\n",
+    "        print 'used # sequences: value is inaccurate, please implement'\n",
+    "        print 'used # sequences:',total_trans_batch(u_list,dataFrame_count)                         \n",
     "#     display(dataFrame.acct_id)\n",
+    "    \n",
     "    u_list = list(set(u_list))\n",
-    "    \n",
-    "    \n",
-    "    #######Get subsampled space of users ##########\n",
-    "    ##TODO numpy.slice(% of users to use)\n",
-    "    # u_list = % u_list \n",
-    "    ######\n",
-    "    \n",
-    "    \n",
     "    print 'return set cardinality:',len(u_list)\n",
     "    cnt = 0\n",
     "    head = 0\n",
     "    tail = len(u_list)-1\n",
+    "    u_list_all = u_list\n",
     "    while True:\n",
     "        users = set()\n",
     "        cnt_trans = 0\n",
+    "        if sub_sample != None:\n",
+    "            u_list = np.random.choice(u_list_all, sub_sample,replace=False)\n",
     "        while cnt_trans<sample_size:\n",
     "            \n",
     "            if cnt<usr_ratio:\n",
@@ -1644,16 +1630,10 @@
     "                    cnt_trans = 0\n",
     "                    cnt = 0\n",
     "                    #if you have go through all users - return in order not to overfill epoch\n",
+    "                    #the same logic could have been achieved with break and without the yield line\n",
     "                    print \"##########ALL COVERED##########\"\n",
     "                    yield users\n",
-    "                    users = set()\n",
-    "                    \n",
-    "#                     print len(users)\n",
-    "#         print head\n",
-    "#         print tail\n",
-    "        print 'return list length:',len(users)\n",
-    "#         print '# users expiriencing both', len(u_list)-len(users)\n",
-    "        yield users"
+    "                    users = set()"
    ]
   },
   {
@@ -1800,12 +1780,16 @@
    },
    "outputs": [],
    "source": [
-    "def data_generator(disk_engine,encoders,table='data_trim',sample_size=400,usr_ratio=80,class_weight=None):\n",
-    "    user_gen = user_generator(disk_engine,usr_ratio=usr_ratio,sample_size=sample_size,table=table)\n",
+    "def data_generator(user_mode,trans_mode,disk_engine,encoders,table='data_trim',\n",
+    "                   sample_size=400,usr_ratio=80,class_weight=None,\n",
+    "                   lbl_pad_val = 2, pad_val = -1,cutt_off_date='2014-05-11'):\n",
+    "    user_gen = user_generator(disk_engine,usr_ratio=usr_ratio,sample_size=sample_size,table=table,mode=user_mode,trans_mode=trans_mode)\n",
     "    print \"Users generator\"\n",
+    "    last_date = get_last_date(cutt_off_date,table,disk_engine)\n",
+    "    print 'last_date calculated!'\n",
     "    while True:\n",
     "        users = next(user_gen)\n",
-    "        yield sequence_generator(users,encoders,mode='train',table=table,class_weight=class_weight)"
+    "        yield sequence_generator(users,encoders,disk_engine,lbl_pad_val,pad_val,last_date,mode=trans_mode,table=table,class_weight=class_weight)"
    ]
   },
   {
@@ -3356,12 +3340,301 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 267,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'_function_kwargs': {},\n",
+       " '_output_mask_cache': {'139972926101776_139972926060048': Any{2}.0,\n",
+       "  '139972926101776_9545840': Any{2}.0},\n",
+       " '_output_shape_cache': {'(None, 60, 44)': (None, 60, 3)},\n",
+       " '_output_tensor_cache': {'139972926101776_9545840': Reshape{3}.0},\n",
+       " 'built': True,\n",
+       " 'container_nodes': {'gru_7_ib-0',\n",
+       "  'gru_8_ib-0',\n",
+       "  'gru_9_ib-0',\n",
+       "  'main_input_ib-0',\n",
+       "  'masking_3_ib-0',\n",
+       "  'timedistributed_3_ib-0'},\n",
+       " 'history': <keras.callbacks.History at 0x7f4dc8c1cc50>,\n",
+       " 'inbound_nodes': [<keras.engine.topology.Node at 0x7f4def443550>],\n",
+       " 'input_layers': [<keras.engine.topology.InputLayer at 0x7f4dfc89d690>],\n",
+       " 'input_layers_node_indices': [0],\n",
+       " 'input_layers_tensor_indices': [0],\n",
+       " 'input_names': ['main_input'],\n",
+       " 'inputs': [main_input],\n",
+       " 'internal_input_shapes': [(None, 60, 44)],\n",
+       " 'internal_output_shapes': [(None, 60, 3)],\n",
+       " 'layers': [<keras.engine.topology.InputLayer at 0x7f4dfc89d690>,\n",
+       "  <keras.layers.core.Masking at 0x7f4dfc89d990>,\n",
+       "  <keras.layers.recurrent.GRU at 0x7f4dfc893690>,\n",
+       "  <keras.layers.recurrent.GRU at 0x7f4dedb3e790>,\n",
+       "  <keras.layers.recurrent.GRU at 0x7f4dee8a49d0>,\n",
+       "  <keras.layers.wrappers.TimeDistributed at 0x7f4def428050>],\n",
+       " 'layers_by_depth': {0: [<keras.layers.wrappers.TimeDistributed at 0x7f4def428050>],\n",
+       "  1: [<keras.layers.recurrent.GRU at 0x7f4dee8a49d0>],\n",
+       "  2: [<keras.layers.recurrent.GRU at 0x7f4dedb3e790>],\n",
+       "  3: [<keras.layers.recurrent.GRU at 0x7f4dfc893690>],\n",
+       "  4: [<keras.layers.core.Masking at 0x7f4dfc89d990>],\n",
+       "  5: [<keras.engine.topology.InputLayer at 0x7f4dfc89d690>]},\n",
+       " 'loss': 'sparse_categorical_crossentropy',\n",
+       " 'loss_functions': [<function keras.objectives.sparse_categorical_crossentropy>],\n",
+       " 'loss_weights': None,\n",
+       " 'metrics': [mean],\n",
+       " 'metrics_names': ['loss', 'acc'],\n",
+       " 'name': 'model_3',\n",
+       " 'nodes_by_depth': {0: [<keras.engine.topology.Node at 0x7f4def39fa50>],\n",
+       "  1: [<keras.engine.topology.Node at 0x7f4dee6a9950>],\n",
+       "  2: [<keras.engine.topology.Node at 0x7f4dee2c2790>],\n",
+       "  3: [<keras.engine.topology.Node at 0x7f4dedabf690>],\n",
+       "  4: [<keras.engine.topology.Node at 0x7f4dfc8934d0>],\n",
+       "  5: [<keras.engine.topology.Node at 0x7f4dfc89d950>]},\n",
+       " 'optimizer': <keras.optimizers.RMSprop at 0x7f4dfc89d610>,\n",
+       " 'outbound_nodes': [],\n",
+       " 'output_layers': [<keras.layers.wrappers.TimeDistributed at 0x7f4def428050>],\n",
+       " 'output_layers_node_indices': [0],\n",
+       " 'output_layers_tensor_indices': [0],\n",
+       " 'output_names': ['timedistributed_3'],\n",
+       " 'outputs': [Reshape{3}.0],\n",
+       " 'predict_function': <keras.backend.theano_backend.Function at 0x7f4dc982a250>,\n",
+       " 'sample_weight_mode': None,\n",
+       " 'sample_weight_modes': [None],\n",
+       " 'sample_weights': [timedistributed_3_sample_weights],\n",
+       " 'stop_training': False,\n",
+       " 'supports_masking': False,\n",
+       " 'targets': [timedistributed_3_target],\n",
+       " 'test_function': <keras.backend.theano_backend.Function at 0x7f4e055cda10>,\n",
+       " 'total_loss': Elemwise{mul,no_inplace}.0,\n",
+       " 'train_function': <keras.backend.theano_backend.Function at 0x7f4df10dda90>,\n",
+       " 'validation_data': None}"
+      ]
+     },
+     "execution_count": 267,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.__dict__\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 269,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'epoch': [0, 1],\n",
+       " 'history': {'acc': [0.99639272671563706, 0.99828143543342718],\n",
+       "  'loss': [0.030823190755963386, 0.021165021918162573]},\n",
+       " 'model': <keras.engine.training.Model at 0x7f4def443610>,\n",
+       " 'params': {'do_validation': False,\n",
+       "  'metrics': ['loss', 'acc', 'val_loss', 'val_acc'],\n",
+       "  'nb_epoch': 3,\n",
+       "  'nb_sample': 1959,\n",
+       "  'verbose': 1}}"
+      ]
+     },
+     "execution_count": 269,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.history.__dict__"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "users =  \n",
+    "np.random.choice(aa_milne_arr, 5, replace=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 271,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of users: 268\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(array([[[ -1.00000000e+00,  -1.00000000e+00,  -1.00000000e+00, ...,\n",
+       "           -1.00000000e+00,  -1.00000000e+00,  -1.00000000e+00],\n",
+       "         [ -1.00000000e+00,  -1.00000000e+00,  -1.00000000e+00, ...,\n",
+       "           -1.00000000e+00,  -1.00000000e+00,  -1.00000000e+00],\n",
+       "         [ -1.00000000e+00,  -1.00000000e+00,  -1.00000000e+00, ...,\n",
+       "           -1.00000000e+00,  -1.00000000e+00,  -1.00000000e+00],\n",
+       "         ..., \n",
+       "         [  2.42000000e+02,   1.39394930e+18,   5.90640000e+04, ...,\n",
+       "            1.38983039e+18,   9.70000000e+01,   1.36995837e+18],\n",
+       "         [  2.42000000e+02,   1.39463869e+18,   1.93390000e+04, ...,\n",
+       "            1.38983039e+18,   9.70000000e+01,   1.36995837e+18],\n",
+       "         [  2.42000000e+02,   1.39463979e+18,   5.44880000e+04, ...,\n",
+       "            1.38983039e+18,   9.70000000e+01,   1.36995837e+18]],\n",
+       " \n",
+       "        [[ -1.00000000e+00,  -1.00000000e+00,  -1.00000000e+00, ...,\n",
+       "           -1.00000000e+00,  -1.00000000e+00,  -1.00000000e+00],\n",
+       "         [ -1.00000000e+00,  -1.00000000e+00,  -1.00000000e+00, ...,\n",
+       "           -1.00000000e+00,  -1.00000000e+00,  -1.00000000e+00],\n",
+       "         [ -1.00000000e+00,  -1.00000000e+00,  -1.00000000e+00, ...,\n",
+       "           -1.00000000e+00,  -1.00000000e+00,  -1.00000000e+00],\n",
+       "         ..., \n",
+       "         [  6.23000000e+02,   1.39024174e+18,   5.73580000e+04, ...,\n",
+       "            1.38913921e+18,   5.00000000e+01,   1.38326397e+18],\n",
+       "         [  6.23000000e+02,   1.39090228e+18,   1.81970000e+04, ...,\n",
+       "            1.38913921e+18,   5.00000000e+01,   1.38326397e+18],\n",
+       "         [  6.23000000e+02,   1.39618295e+18,   5.11260000e+04, ...,\n",
+       "            1.39449603e+18,   3.03999996e+01,   1.38326397e+18]],\n",
+       " \n",
+       "        [[ -1.00000000e+00,  -1.00000000e+00,  -1.00000000e+00, ...,\n",
+       "           -1.00000000e+00,  -1.00000000e+00,  -1.00000000e+00],\n",
+       "         [ -1.00000000e+00,  -1.00000000e+00,  -1.00000000e+00, ...,\n",
+       "           -1.00000000e+00,  -1.00000000e+00,  -1.00000000e+00],\n",
+       "         [ -1.00000000e+00,  -1.00000000e+00,  -1.00000000e+00, ...,\n",
+       "           -1.00000000e+00,  -1.00000000e+00,  -1.00000000e+00],\n",
+       "         ..., \n",
+       "         [  7.65000000e+02,   1.39825306e+18,   2.69500000e+04, ...,\n",
+       "            1.39639681e+18,   3.47970001e+02,   1.34429755e+18],\n",
+       "         [  7.65000000e+02,   1.39853811e+18,   5.69780000e+04, ...,\n",
+       "            1.39639681e+18,   3.47970001e+02,   1.34429755e+18],\n",
+       "         [  7.65000000e+02,   1.39860752e+18,   2.01500000e+03, ...,\n",
+       "            1.39639681e+18,   3.47970001e+02,   1.34429755e+18]],\n",
+       " \n",
+       "        ..., \n",
+       "        [[ -1.00000000e+00,  -1.00000000e+00,  -1.00000000e+00, ...,\n",
+       "           -1.00000000e+00,  -1.00000000e+00,  -1.00000000e+00],\n",
+       "         [ -1.00000000e+00,  -1.00000000e+00,  -1.00000000e+00, ...,\n",
+       "           -1.00000000e+00,  -1.00000000e+00,  -1.00000000e+00],\n",
+       "         [ -1.00000000e+00,  -1.00000000e+00,  -1.00000000e+00, ...,\n",
+       "           -1.00000000e+00,  -1.00000000e+00,  -1.00000000e+00],\n",
+       "         ..., \n",
+       "         [  5.82000000e+02,   1.38934798e+18,   5.76130000e+04, ...,\n",
+       "            1.38913921e+18,   1.49121997e+03,   1.36762561e+18],\n",
+       "         [  5.82000000e+02,   1.38936653e+18,   5.66200000e+03, ...,\n",
+       "            1.38913921e+18,   1.49121997e+03,   1.36762561e+18],\n",
+       "         [  5.82000000e+02,   1.38943773e+18,   5.01400000e+03, ...,\n",
+       "            1.38913921e+18,   1.49121997e+03,   1.36762561e+18]],\n",
+       " \n",
+       "        [[ -1.00000000e+00,  -1.00000000e+00,  -1.00000000e+00, ...,\n",
+       "           -1.00000000e+00,  -1.00000000e+00,  -1.00000000e+00],\n",
+       "         [ -1.00000000e+00,  -1.00000000e+00,  -1.00000000e+00, ...,\n",
+       "           -1.00000000e+00,  -1.00000000e+00,  -1.00000000e+00],\n",
+       "         [ -1.00000000e+00,  -1.00000000e+00,  -1.00000000e+00, ...,\n",
+       "           -1.00000000e+00,  -1.00000000e+00,  -1.00000000e+00],\n",
+       "         ..., \n",
+       "         [  5.82000000e+02,   1.39808140e+18,   2.19760000e+04, ...,\n",
+       "            1.39700154e+18,   7.21359985e+02,   1.36762561e+18],\n",
+       "         [  5.82000000e+02,   1.39809514e+18,   9.47700000e+03, ...,\n",
+       "            1.39700154e+18,   7.21359985e+02,   1.36762561e+18],\n",
+       "         [  5.82000000e+02,   1.39854251e+18,   4.82200000e+03, ...,\n",
+       "            1.39700154e+18,   7.21359985e+02,   1.36762561e+18]],\n",
+       " \n",
+       "        [[ -1.00000000e+00,  -1.00000000e+00,  -1.00000000e+00, ...,\n",
+       "           -1.00000000e+00,  -1.00000000e+00,  -1.00000000e+00],\n",
+       "         [ -1.00000000e+00,  -1.00000000e+00,  -1.00000000e+00, ...,\n",
+       "           -1.00000000e+00,  -1.00000000e+00,  -1.00000000e+00],\n",
+       "         [ -1.00000000e+00,  -1.00000000e+00,  -1.00000000e+00, ...,\n",
+       "           -1.00000000e+00,  -1.00000000e+00,  -1.00000000e+00],\n",
+       "         ..., \n",
+       "         [  1.82000000e+02,   1.38591145e+18,   4.64510000e+04, ...,\n",
+       "            1.38551041e+18,   8.48099976e+01,   1.32287041e+18],\n",
+       "         [  1.82000000e+02,   1.38969075e+18,   5.06420000e+04, ...,\n",
+       "            1.38870724e+18,   3.56579987e+02,   1.32287041e+18],\n",
+       "         [  1.82000000e+02,   1.39075453e+18,   2.64090000e+04, ...,\n",
+       "            1.38870724e+18,   3.56579987e+02,   1.32287041e+18]]], dtype=float32),\n",
+       " array([[[ 2.],\n",
+       "         [ 2.],\n",
+       "         [ 2.],\n",
+       "         ..., \n",
+       "         [ 0.],\n",
+       "         [ 0.],\n",
+       "         [ 0.]],\n",
+       " \n",
+       "        [[ 2.],\n",
+       "         [ 2.],\n",
+       "         [ 2.],\n",
+       "         ..., \n",
+       "         [ 0.],\n",
+       "         [ 0.],\n",
+       "         [ 0.]],\n",
+       " \n",
+       "        [[ 2.],\n",
+       "         [ 2.],\n",
+       "         [ 2.],\n",
+       "         ..., \n",
+       "         [ 0.],\n",
+       "         [ 0.],\n",
+       "         [ 0.]],\n",
+       " \n",
+       "        ..., \n",
+       "        [[ 2.],\n",
+       "         [ 2.],\n",
+       "         [ 2.],\n",
+       "         ..., \n",
+       "         [ 0.],\n",
+       "         [ 0.],\n",
+       "         [ 0.]],\n",
+       " \n",
+       "        [[ 2.],\n",
+       "         [ 2.],\n",
+       "         [ 2.],\n",
+       "         ..., \n",
+       "         [ 0.],\n",
+       "         [ 0.],\n",
+       "         [ 0.]],\n",
+       " \n",
+       "        [[ 2.],\n",
+       "         [ 2.],\n",
+       "         [ 2.],\n",
+       "         ..., \n",
+       "         [ 0.],\n",
+       "         [ 0.],\n",
+       "         [ 0.]]], dtype=float32))"
+      ]
+     },
+     "execution_count": 271,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "next(data_gen)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "model.train_on_batch(self, x, y, sample_weight=None, class_weight=None)"
+   ]
   }
  ],
  "metadata": {
