Priror to major subsampling changes

--- a/Data-Preprocessing-Copy1.ipynb
+++ b/Data-Preprocessing-Copy1.ipynb
@@ -760,8 +760,8 @@
     "cnt = 0\n",
     "head = 0\n",
     "tail = len(df_ds_u.acct_id)-1\n",
-    "sample_size = tail\n",
-    "for i in range(sample_size):\n",
+    "batch_size = tail\n",
+    "for i in range(batch_size):\n",
     "    \n",
     "    if cnt<usr_ratio:\n",
     "        users.add(df_ds_u.acct_id[head])\n",
@@ -1540,7 +1540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 282,
    "metadata": {
     "collapsed": false
    },
@@ -1575,7 +1575,7 @@
     "        return get_num_trans(user,dataFrame_count)\n",
     "    else:\n",
     "        return 0\n",
-    "def user_generator(disk_engine,table='data_trim',sample_size=50,usr_ratio=80,\n",
+    "def user_generator(disk_engine,table='data_trim',batch_size=50,usr_ratio=80,\n",
     "                   mode='train',cutt_off_date='2014-05-11',trans_mode='train',sub_sample=None):\n",
     "\n",
     "\n",
@@ -1609,8 +1609,11 @@
     "        users = set()\n",
     "        cnt_trans = 0\n",
     "        if sub_sample != None:\n",
+    "            assert sub_sample<len(u_list_all), 'sub_sample size select is {sub_sample}, but there are only {us} users'.format(sub_sample=sub_sample,us=len(u_list_all))\n",
     "            u_list = np.random.choice(u_list_all, sub_sample,replace=False)\n",
-    "        while cnt_trans<sample_size:\n",
+    "            ### reset tail value, to avoid outof bounds exception\n",
+    "            tail = len(u_list)-1\n",
+    "        while cnt_trans<batch_size:\n",
     "            \n",
     "            if cnt<usr_ratio:\n",
     "                cnt_trans+=add_user(head,u_list,dataFrame_count,users)\n",
@@ -1638,7 +1641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 276,
    "metadata": {
     "collapsed": false
    },
@@ -1690,12 +1693,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 283,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "User List acquired\n",
+      "total # users: 478\n",
+      "total # unique users: 478\n",
+      "total # sequences: 653.0\n",
+      "return set cardinality: 320\n",
+      "##########ALL COVERED##########\n",
+      "11.0\n",
+      "##########ALL COVERED##########\n",
+      "19.0\n",
+      "##########ALL COVERED##########\n",
+      "14.0\n",
+      "##########ALL COVERED##########\n",
+      "29.0\n",
+      "##########ALL COVERED##########\n",
+      "18.0\n"
+     ]
+    }
+   ],
    "source": [
     "epoch_smpls = [] \n",
     "sample_num = 10\n",
@@ -1707,7 +1732,7 @@
     "#                        'group by acct_id '\n",
     "#                         'order by -num_trans'\n",
     "#                        .format(table=table), disk_engine)\n",
-    "user_gen = user_generator(disk_engine,table=table)\n",
+    "user_gen = user_generator(disk_engine,table=table,sub_sample=50)\n",
     "for i in range(5):\n",
     "    total_trans = 0\n",
     "    while total_trans < sample_num:\n",
@@ -1719,11 +1744,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 284,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[11.0, 19.0, 14.0, 29.0, 18.0]"
+      ]
+     },
+     "execution_count": 284,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "epoch_smpls"
    ]
@@ -1774,22 +1810,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 350,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "def data_generator(user_mode,trans_mode,disk_engine,encoders,table='data_trim',\n",
-    "                   sample_size=400,usr_ratio=80,class_weight=None,\n",
-    "                   lbl_pad_val = 2, pad_val = -1,cutt_off_date='2014-05-11'):\n",
-    "    user_gen = user_generator(disk_engine,usr_ratio=usr_ratio,sample_size=sample_size,table=table,mode=user_mode,trans_mode=trans_mode)\n",
+    "\n",
+    "    \n",
+    "\n",
+    "def data_generator(user_mode,trans_mode,disk_engine,encoders,table,\n",
+    "                   batch_size=400,usr_ratio=80,class_weight=None,lbl_pad_val = 2,\n",
+    "                   pad_val = -1,cutt_off_date='2014-05-11',sub_sample=None,epoch_size=None):\n",
+    "    user_gen = user_generator(disk_engine,usr_ratio=usr_ratio,batch_size=batch_size,table=table,mode=user_mode,trans_mode=trans_mode,sub_sample=sub_sample)\n",
     "    print \"Users generator\"\n",
     "    last_date = get_last_date(cutt_off_date,table,disk_engine)\n",
     "    print 'last_date calculated!'\n",
+    "    x_acc = []\n",
+    "    y_acc = []\n",
+    "    sample_w = []\n",
+    "    total_eg = 0\n",
     "    while True:\n",
     "        users = next(user_gen)\n",
-    "        yield sequence_generator(users,encoders,disk_engine,lbl_pad_val,pad_val,last_date,mode=trans_mode,table=table,class_weight=class_weight)"
+    "        outs = sequence_generator(users,encoders,disk_engine,lbl_pad_val,pad_val,last_date,mode=trans_mode,table=table,class_weight=class_weight)\n",
+    "        \n",
+    "        if not(epoch_size == None):\n",
+    "            while True:\n",
+    "                num_seq = outs[0].shape[0]\n",
+    "                print 'num_Seq',num_seq\n",
+    "               \n",
+    "                remain = epoch_size - (total_eg + num_seq)\n",
+    "                print '{remain} = {epoch_size} - ({total_eg}+{num_seq})'.format(remain=remain,epoch_size=epoch_size,total_eg=total_eg,num_seq=num_seq)   \n",
+    "                print 'remain',remain\n",
+    "                if remain >=0:\n",
+    "                    total_eg +=num_seq\n",
+    "                    yield outs\n",
+    "                else:\n",
+    "                    ### remain <0 => num_seq - remain\n",
+    "                    cutline = num_seq + remain\n",
+    "                    temp = []\n",
+    "                    for i in range(len(outs)):\n",
+    "                        temp.append(outs[i][0:cutline])\n",
+    "                    yield tuple(temp)\n",
+    "                    ####end of epoch!\n",
+    "\n",
+    "                    total_eg = 0\n",
+    "                    temp = []\n",
+    "                    for i in range(len(outs)):\n",
+    "                        temp.append(outs[0][cutline:])\n",
+    "                    outs =  tuple(temp) \n",
+    "                if remain >=0:\n",
+    "                    break\n",
+    "        else:    \n",
+    "            yield outs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 351,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "def inside(t):\n",
+    "    yield t+1\n",
+    "    yield t+2\n",
+    "def outside(t):\n",
+    "    inner = inside(t)\n",
+    "    while True:\n",
+    "        yield next(inner)\n",
+    "        t*=10\n",
+    "gen_test = outside(5)\n",
+    "print next(gen_test)\n",
+    "print next(gen_test)\n"
    ]
   },
   {
@@ -1798,9 +1901,34 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Users generator\n",
+      "0    1398712475000000000\n",
+      "Name: AUTHZN_RQST_PROC_TM, dtype: int64\n",
+      "last_date calculated!\n",
+      "User List acquired\n",
+      "total # users: 1840\n",
+      "total # unique users: 1840\n",
+      "total # sequences: 2763.0\n",
+      "return set cardinality: 1232\n",
+      "##########ALL COVERED##########\n",
+      "Number of users: 80\n"
+     ]
+    }
+   ],
    "source": [
-    "data_gen =  data_generator(disk_engine,encoders,table='data_trim',class_weight=class_weight)"
+    "user_mode = 'train'\n",
+    "trans_mode = 'train'\n",
+    "data_gen =  data_generator(user_mode,trans_mode,disk_engine,encoders,table='data_little',class_weight=class_weight,batch_size=400,sub_sample=80,epoch_size=30)\n",
+    "for i in range(5):\n",
+    "    X,y,s = next(data_gen)\n",
+    "    print 'X',X.shape\n",
+    "    print 'y',y.shape\n",
+    "    print 's',s.shape"
    ]
   },
   {
@@ -2517,8 +2645,8 @@
    "outputs": [],
    "source": [
     "def eval_generator(user_mode,trans_mode,disk_engine,encoders,table='data_trim',\n",
-    "                   sample_size=400,usr_ratio=80,class_weight=None,lbl_pad_val = 2, pad_val = -1):\n",
-    "    user_gen = user_generator(disk_engine,usr_ratio=usr_ratio,sample_size=sample_size,table=table,mode=user_mode)\n",
+    "                   batch_size=400,usr_ratio=80,class_weight=None,lbl_pad_val = 2, pad_val = -1):\n",
+    "    user_gen = user_generator(disk_engine,usr_ratio=usr_ratio,batch_size=batch_size,table=table,mode=user_mode)\n",
     "    print \"Users generator\"\n",
     "    while True:\n",
     "        users = next(user_gen)\n",
@@ -2533,8 +2661,8 @@
    },
    "outputs": [],
    "source": [
-    "def eval_trans_generator(disk_engine,encoders,table='data_trim',sample_size=400,usr_ratio=80,class_weight=None,lbl_pad_val = 2, pad_val = -1):\n",
-    "    user_gen = user_generator(disk_engine,usr_ratio=usr_ratio,sample_size=sample_size,table=table)\n",
+    "def eval_trans_generator(disk_engine,encoders,table='data_trim',batch_size=400,usr_ratio=80,class_weight=None,lbl_pad_val = 2, pad_val = -1):\n",
+    "    user_gen = user_generator(disk_engine,usr_ratio=usr_ratio,batch_size=batch_size,table=table)\n",
     "    print \"Users generator\"\n",
     "    while True:\n",
     "        users = next(user_gen)\n",
@@ -2549,8 +2677,8 @@
    },
    "outputs": [],
    "source": [
-    "def eval_users_generator(disk_engine,encoders,table='data_trim',sample_size=400,usr_ratio=80,class_weight=None,lbl_pad_val = 2, pad_val = -1):\n",
-    "    user_gen = user_generator(disk_engine,usr_ratio=usr_ratio,sample_size=sample_size,table=table,mode='test')\n",
+    "def eval_users_generator(disk_engine,encoders,table='data_trim',batch_size=400,usr_ratio=80,class_weight=None,lbl_pad_val = 2, pad_val = -1):\n",
+    "    user_gen = user_generator(disk_engine,usr_ratio=usr_ratio,batch_size=batch_size,table=table,mode='test')\n",
     "    print \"Users generator\"\n",
     "    while True:\n",
     "        users = next(user_gen)\n",
@@ -2565,8 +2693,8 @@
    },
    "outputs": [],
    "source": [
-    "def eval_usertrans_generator(disk_engine,encoders,table='data_trim',sample_size=400,usr_ratio=80,class_weight=None,lbl_pad_val = 2, pad_val = -1):\n",
-    "    user_gen = user_generator(disk_engine,usr_ratio=usr_ratio,sample_size=sample_size,table=table,mode='test')\n",
+    "def eval_usertrans_generator(disk_engine,encoders,table='data_trim',batch_size=400,usr_ratio=80,class_weight=None,lbl_pad_val = 2, pad_val = -1):\n",
+    "    user_gen = user_generator(disk_engine,usr_ratio=usr_ratio,batch_size=batch_size,table=table,mode='test')\n",
     "    print \"Users generator\"\n",
     "    "
    ]
@@ -2580,7 +2708,7 @@
    },
    "outputs": [],
    "source": [
-    "test_gen = eval_trans_generator(disk_engine,encoders,table=table,sample_size=400,usr_ratio=80,class_weight=None)\n",
+    "test_gen = eval_trans_generator(disk_engine,encoders,table=table,batch_size=400,usr_ratio=80,class_weight=None)\n",
     "X_test_pad,y_test_S = next(test_gen)\n",
     "print X_test_pad.shape\n",
     "print y_test_S.shape\n"
@@ -2595,7 +2723,7 @@
    },
    "outputs": [],
    "source": [
-    "test_gen = eval_users_generator(disk_engine,encoders,table=table,sample_size=400,usr_ratio=80,class_weight=None)\n",
+    "test_gen = eval_users_generator(disk_engine,encoders,table=table,batch_size=400,usr_ratio=80,class_weight=None)\n",
     "X_test_pad,y_test_S = next(test_gen)\n",
     "print X_test_pad.shape\n",
     "print y_test_S.shape\n"
@@ -2612,7 +2740,7 @@
     "user_mode = 'test'\n",
     "trans_mode = 'train'\n",
     "table = 'data_more'\n",
-    "test_gen = eval_generator(user_mode,trans_mode,disk_engine,encoders,table=table,sample_size=400,usr_ratio=80,class_weight=None)\n",
+    "test_gen = eval_generator(user_mode,trans_mode,disk_engine,encoders,table=table,batch_size=400,usr_ratio=80,class_weight=None)\n",
     "X_test_pad,y_test_S = next(test_gen)\n",
     "print X_test_pad.shape\n",
     "print y_test_S.shape"
@@ -2756,7 +2884,7 @@
    "source": [
     "val_samples = 400\n",
     "eval_gen = eval_users_generator(disk_engine,encoders,table=table,\n",
-    "                     sample_size=400,usr_ratio=80,class_weight=None)\n",
+    "                     batch_size=400,usr_ratio=80,class_weight=None)\n",
     "model.evaluate_generator(eval_gen, val_samples, max_q_size=10000)"
    ]
   },
@@ -2779,7 +2907,7 @@
     "# model.predict_generator(eval_gen, val_samples, max_q_size=10000)\n",
     "samples = 0\n",
     "eval_gen = eval_users_generator(disk_engine,encoders,table=table,\n",
-    "                     sample_size=400,usr_ratio=80,class_weight=None)\n",
+    "                     batch_size=400,usr_ratio=80,class_weight=None)\n",
     "for batch in eval_gen:\n",
     "    "
    ]
@@ -2806,7 +2934,7 @@
    "outputs": [],
    "source": [
     "eval_gen = eval_users_generator(disk_engine,encoders,table=table,\n",
-    "                     sample_size=400,usr_ratio=80,class_weight=None)\n",
+    "                     batch_size=400,usr_ratio=80,class_weight=None)\n",
     "x,y = next(eval_gen)\n",
     "y_hat = model.predict(x)"
    ]
@@ -2820,7 +2948,7 @@
    "outputs": [],
    "source": [
     "data_gen = data_generator(disk_engine,encoders,table=table,\n",
-    "                     sample_size=400,usr_ratio=80,class_weight=None)\n",
+    "                     batch_size=400,usr_ratio=80,class_weight=None)\n",
     "x,y = next(eval_gen)\n",
     "y_hat = model.predict(x)"
    ]
@@ -2884,7 +3012,7 @@
     "eval_auc(model,mode,num_sample):\n",
     "    if mode =='train':\n",
     "        gen = data_gen = data_generator(disk_engine,encoders,table=table,\n",
-    "                     sample_size=400,usr_ratio=80,class_weight=None)"
+    "                     batch_size=400,usr_ratio=80,class_weight=None)"
    ]
   },
   {
@@ -2896,7 +3024,7 @@
    "outputs": [],
    "source": [
     "data_gen = data_generator(disk_engine,encoders,table=table,\n",
-    "                     sample_size=400,usr_ratio=80,class_weight=None)\n",
+    "                     batch_size=400,usr_ratio=80,class_weight=None)\n",
     "model.eval_auc_generator(data_gen, 484, max_q_size=10000)"
    ]
   },
@@ -2942,7 +3070,7 @@
    "outputs": [],
    "source": [
     "eval_gen = eval_users_generator(disk_engine,encoders,table=table,\n",
-    "                     sample_size=400,usr_ratio=80,class_weight=None)\n",
+    "                     batch_size=400,usr_ratio=80,class_weight=None)\n",
     "aucs = eval_auc_generator(model, eval_gen, 978, max_q_size=10000,plt_filename=None)"
    ]
   },
@@ -2966,7 +3094,7 @@
    "outputs": [],
    "source": [
     "eval_gen = eval_users_generator(disk_engine,encoders,table=table,\n",
-    "                     sample_size=400,usr_ratio=80,class_weight=None)\n",
+    "                     batch_size=400,usr_ratio=80,class_weight=None)\n",
     "all_outs = eval_auc_generator(model, eval_gen, val_samples, max_q_size=10000,plt_filename=None)\n",
     "print all_outs"
    ]
@@ -3100,7 +3228,7 @@
    "source": [
     "    plt_filename= None                    \n",
     "    eval_gen = eval_users_generator(disk_engine,encoders,table=table,\n",
-    "                                sample_size=400,usr_ratio=80,class_weight=None,lbl_pad_val = lbl_pad_val, pad_val = pad_val)\n",
+    "                                batch_size=400,usr_ratio=80,class_weight=None,lbl_pad_val = lbl_pad_val, pad_val = pad_val)\n",
     "\n",
     "    \n",
     "    eval_list  = eval_auc_generator(model, eval_gen, val_samples, max_q_size=10000,plt_filename=plt_filename)"
@@ -3289,7 +3417,7 @@
    "source": [
     "from ccfd_dnn.model import *\n",
     "data_gen = data_generator(user_mode,trans_mode,disk_engine,encoders,table=table,\n",
-    "                                         sample_size=400,usr_ratio=80,class_weight=None,lbl_pad_val = 2, pad_val = -1)\n",
+    "                                         batch_size=400,usr_ratio=80,class_weight=None,lbl_pad_val = 2, pad_val = -1)\n",
     "next(data_gen)"
    ]
   },
