--- a/Data-Preprocessing-Copy1.ipynb
+++ b/Data-Preprocessing-Copy1.ipynb
@@ -1897,7 +1897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 355,
    "metadata": {
     "collapsed": false
    },
@@ -1916,7 +1916,101 @@
       "total # sequences: 2763.0\n",
       "return set cardinality: 1232\n",
       "##########ALL COVERED##########\n",
-      "Number of users: 80\n"
+      "Number of users: 80\n",
+      "num_Seq 121\n",
+      "-91 = 30 - (0+121)\n",
+      "remain -91\n",
+      "X (30, 60, 44)\n",
+      "y (30, 60, 1)\n",
+      "s (30, 60)\n",
+      "num_Seq 91\n",
+      "-61 = 30 - (0+91)\n",
+      "remain -61\n",
+      "X (30, 60, 44)\n",
+      "y (30, 60, 44)\n",
+      "s (30, 60, 44)\n",
+      "num_Seq 61\n",
+      "-31 = 30 - (0+61)\n",
+      "remain -31\n",
+      "X (30, 60, 44)\n",
+      "y (30, 60, 44)\n",
+      "s (30, 60, 44)\n",
+      "num_Seq 31\n",
+      "-1 = 30 - (0+31)\n",
+      "remain -1\n",
+      "X (30, 60, 44)\n",
+      "y (30, 60, 44)\n",
+      "s (30, 60, 44)\n",
+      "num_Seq 1\n",
+      "29 = 30 - (0+1)\n",
+      "remain 29\n",
+      "X (1, 60, 44)\n",
+      "y (1, 60, 44)\n",
+      "s (1, 60, 44)\n",
+      "##########ALL COVERED##########\n",
+      "Number of users: 80\n",
+      "num_Seq 121\n",
+      "-92 = 30 - (1+121)\n",
+      "remain -92\n",
+      "X (29, 60, 44)\n",
+      "y (29, 60, 1)\n",
+      "s (29, 60)\n",
+      "num_Seq 92\n",
+      "-62 = 30 - (0+92)\n",
+      "remain -62\n",
+      "X (30, 60, 44)\n",
+      "y (30, 60, 44)\n",
+      "s (30, 60, 44)\n",
+      "num_Seq 62\n",
+      "-32 = 30 - (0+62)\n",
+      "remain -32\n",
+      "X (30, 60, 44)\n",
+      "y (30, 60, 44)\n",
+      "s (30, 60, 44)\n",
+      "num_Seq 32\n",
+      "-2 = 30 - (0+32)\n",
+      "remain -2\n",
+      "X (30, 60, 44)\n",
+      "y (30, 60, 44)\n",
+      "s (30, 60, 44)\n",
+      "num_Seq 2\n",
+      "28 = 30 - (0+2)\n",
+      "remain 28\n",
+      "X (2, 60, 44)\n",
+      "y (2, 60, 44)\n",
+      "s (2, 60, 44)\n",
+      "##########ALL COVERED##########\n",
+      "Number of users: 80\n",
+      "num_Seq 121\n",
+      "-93 = 30 - (2+121)\n",
+      "remain -93\n",
+      "X (28, 60, 44)\n",
+      "y (28, 60, 1)\n",
+      "s (28, 60)\n",
+      "num_Seq 93\n",
+      "-63 = 30 - (0+93)\n",
+      "remain -63\n",
+      "X (30, 60, 44)\n",
+      "y (30, 60, 44)\n",
+      "s (30, 60, 44)\n",
+      "num_Seq 63\n",
+      "-33 = 30 - (0+63)\n",
+      "remain -33\n",
+      "X (30, 60, 44)\n",
+      "y (30, 60, 44)\n",
+      "s (30, 60, 44)\n",
+      "num_Seq 33\n",
+      "-3 = 30 - (0+33)\n",
+      "remain -3\n",
+      "X (30, 60, 44)\n",
+      "y (30, 60, 44)\n",
+      "s (30, 60, 44)\n",
+      "num_Seq 3\n",
+      "27 = 30 - (0+3)\n",
+      "remain 27\n",
+      "X (3, 60, 44)\n",
+      "y (3, 60, 44)\n",
+      "s (3, 60, 44)\n"
      ]
     }
    ],
@@ -1924,7 +2018,7 @@
     "user_mode = 'train'\n",
     "trans_mode = 'train'\n",
     "data_gen =  data_generator(user_mode,trans_mode,disk_engine,encoders,table='data_little',class_weight=class_weight,batch_size=400,sub_sample=80,epoch_size=30)\n",
-    "for i in range(5):\n",
+    "for i in range(15):\n",
     "    X,y,s = next(data_gen)\n",
     "    print 'X',X.shape\n",
     "    print 'y',y.shape\n",
